--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Shopped App</string>
     <string name="new_list">New List</string>
+    <string name="name">Name</string>
+    <string name="add_item">Add Item</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
 </resources>
